--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -3,16 +3,20 @@ description: File a bug report
 title: "[Bug]: "
 labels: ["bug"]
 body:
-  - type: markdown
-    attributes:
-      value: |
-        Thanks for taking the time to fill out this bug report!
   - type: textarea
     id: what-happened
     attributes:
       label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
+      description: Tell us more about the problem
+      placeholder: ""
+      value: ""
+    validations:
+      required: true
+   - type: textarea
+    id: what-expected
+    attributes:
+      label: What is expected ?
+      description: This is should be the correct behavior
+      value: ""
     validations:
       required: true
