--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,6 @@
 name: Feature Request
 description: Propose a change
-title: "[Feature]: "
-labels: []
+labels: ["feature"]
 body:
   - type: textarea
     id: problem
