--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,16 +1,21 @@
-name: Feature Request
-description: Propose a change
-labels: ["enhancement"]
+name: Feature request
+description: Suggest an feature for the project
+labels: ["feature"]
 body:
-  - type: textarea
-    id: problem
+  - type: markdown
+    attributes: 
+      value: |
+      **Is your feature request related to a problem? Please describe.**
+      A clear and concise description of what the problem is.
+      
+  - type: markdown
+    atrributes:
+      value: |
+      **Describe the solution you'd like**
+      A clear and concise description of what you want to happen.
+
+  - type: markdown
     attributes:
-      label: Problem to solve
-      placeholder: What the change is it trying to solve ?
-  - type: textarea
-    id: solution
-    attributes:
-      label: Solution
-      placeholder: Can you please give more in details regarding change and the improvement to propose ?
-    validations:
-      required: true
+      value: |
+      **Additional context**
+      Add any other context or screenshots about the feature request here.
