--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -9,7 +9,7 @@ body:
         A clear and concise description of what the problem is.
       
   - type: markdown
-    atrributes:
+    attributes:
       value: |
         **Describe the solution you'd like**
         A clear and concise description of what you want to happen.
