--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -4,6 +4,7 @@ labels: ["feature"]
 body:
   - type: textarea
     attributes: 
+      label: ""
       value: |
         **Is your feature request related to a problem? Please describe.**
         A clear and concise description of what the problem is.
