--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -4,13 +4,15 @@ labels: ["feature"]
 body:
   - type: textarea
     attributes: 
-      label: ""
-      value: |
-        **Is your feature request related to a problem? Please describe.**
-        A clear and concise description of what the problem is.
-        
-        **Describe the solution you'd like**
-        A clear and concise description of what you want to happen.
-        
-        **Additional context**
-        Add any other context or screenshots about the feature request here.
+      label: Problem related ?
+      description: "Is your feature request related to a problem? Please describe
+      placeholder: "A clear and concise description of what the problem is."
+  - type: textarea
+    attributes:
+      label: Solution
+      description: "Describe the solution you'd like"
+      placeholder: "A clear and concise description of what you want to happen."
+  - type: textarea
+    attributes
+      label: Additional context
+      placeholder: "Add any other context or screenshots about the feature request here." 
