--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -13,6 +13,6 @@ body:
       description: "Describe the solution you'd like"
       placeholder: "A clear and concise description of what you want to happen."
   - type: textarea
-    attributes
+    attributes:
       label: Additional context
       placeholder: "Add any other context or screenshots about the feature request here." 
