--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -5,7 +5,7 @@ body:
   - type: textarea
     attributes: 
       label: Problem related ?
-      description: "Is your feature request related to a problem? Please describe
+      description: "Is your feature request related to a problem? Please describe"
       placeholder: "A clear and concise description of what the problem is."
   - type: textarea
     attributes:
