--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,18 +1,12 @@
-name: Bug Report
+name: Report a bug
 description: File a bug report
 labels: ["bug"]
 body:
   - type: textarea
-    id: what-happened
-    attributes:
-      label: What happened?
-      description: Tell us more about the problem
-    validations:
-      required: true
+    attributes: 
+      label: Describe the problem you discovered
+      placeholder: "A clear and concise description of what the problem is."
   - type: textarea
-    id: what-expected
     attributes:
-      label: What is expected ?
-      description: This is should be the correct behavior
-    validations:
-      required: true
+      label: Describe the solution you'd like
+      placeholder: "Clear description of the behavior of what should be correct"
