--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -10,7 +10,16 @@ body:
     attributes:
       label: Describe the solution you'd like
       placeholder: "A clear and concise description of what you want to happen."
+    validations:
+      required: true
   - type: textarea
     attributes:
       label: Additional context
       placeholder: "Add any other context or screenshots about the feature request here." 
+  - type: input
+    id: epic
+    attributes:
+      label: Epic
+      description: Also tell us, what did you expect to happen?
+      placeholder: Which epic belongs to this feature ?
+      value: "A bug happened!"
