--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -16,5 +16,5 @@ body:
     id: epic
     attributes:
       label: Epic
-      placeholder: Which epic belongs to this feature ?
-      value: "#ISSUE_NUMBER"
+      placeholder: "#ISSUE_NUMBER"
+      description: Which epic belongs to this feature ?
