--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,7 @@
 name: Request a feature
 description: Suggest an feature for the project
 labels: ["feature"]
+type: "feature"
 body:
   - type: textarea
     attributes: 
